[tool.poetry]
name = "named_entity_recognition"
version = "0.1.0"
description = ""
authors = ["hckr"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.6.2"
numpy = "^1.20.2"
SPARQLWrapper = "^1.8.5"
urllib3 = "^1.26.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
